@@ -3,7 +3,7 @@
 <div id="content">
 	<h2 class="title">Sign In</h2>
 
-  <%= start_form_tag :action=> "login" %>
+  <%= form_tag :action=> "login" %>
 
 		<center><div style="margin-right: 100px;">
 			<%= render :partial => 'shared/notice_text', :locals => {:flash => flash} %>
